# Cascade-CNN

./: .Loadandtest.lua.swp  .exportModule1.lua.swp  Loadandtest.lua  README.md  conv_layer_output.txt  exportModule1.lua  import.c  loadBinary.c  loadHex.c  module1  module1.bin.bak  module4  pooling_ouput.txt  test  test.c
12cnet/: Loadandtest.lua  exportModule.lua
12net/: exportModule.lua  exportModule1.lua  export_example.lua  loadBinary.c  loadModule4.c
12net2/: exportModule.lua
12test/: 12test  12test.c  CMakeCache.txt  Makefile  cmake_install.cmake  firstLayer.c
48cnet/48ctest/: 12CLayer.c  12Layer.c  24CLayer.c  24Layer.c  48CLayer.c  48Layer.c  48ctest.c  CMakeLists.txt  freeArray.c  global.h  itos.c  multiplyByElement.c  preprocess.c  preprocessing.c
48cnet/48ctest/tests/: array.c  malloc.c  test
Project/: #FinalReport_CNNDNN.lyx#
cascade/: .gitignore  cascade.sln
complete/: 12CLayer.c  24Layer.c  48Layer.c  48ctest.c  CMakeLists.txt  doPyrDown.c  errors.txt  global.h  model.c  nms.c
dataLoading/: exportModule.lua
debug/: SpatialClassifier_test.lua  SpatialClassifier_test.lua~  a.csv  gvimrc  test.lua
demo/: 12Layer.c  48Layer.c  CMakeLists.txt  model.c  readme.txt
demo/tests/: test
others/: errors.txt
preprocess/: Loadandtest.lua  exportModule.lua  readme.txt
project/: energy.m  entropy.m  featuresExtraction.m  homogeneity.m  myContrast.m
resize/: CMakeCache.txt  Display  DisplayImage.c  Makefile  cmake_install.cmake  firstLayer.c  firstLayer.c.bak.c
src/: 12CLayer.c  12Layer.c  24CLayer.c  24Layer.c  48CLayer.c  48Layer.c  cnn  (+18 more)
(+3487 files in other folders)
